# Sudoku

./: .gitignore  Sudoku.sln  Sudoku.workspace
SudokuInterfaceConsole/: 0.sud  57640.sud  57640mod.sud  SudIntCo.c  SudokuInterfaceConsole.cbp  SudokuInterfaceConsole.vcxproj  SudokuInterfaceConsole.vcxproj.filters  test.sud
SudokuSolver/: SudSlvEn.c  SudSlvEn.h  SudokuSolver.cbp  SudokuSolver.vcxproj  SudokuSolver.vcxproj.filters
SudokuSolver/autotools/: Makefile  Makefile.in  config.status  configure  configure.ac  libtool
SudokuSolver/autotools/lib/: Makefile  Makefile.am  Makefile.in  SudSlvEn.c  SudSlvEn.h  SudSlvEn.lo  libSudSlvEn.la
SudokuSolver/autotools/lib/.deps/: SudSlvEn.Plo
SudokuSolver/autotools/lib/.libs/: libSudSlvEn.la  libSudSlvEn.lai  libSudSlvEn.so.0.0.1  libSudSlvEn.so.0.0.2
